# kokoro-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: probe_deepagents.py
src/kokoro_agent/: __init__.py  config.py  content_extractors.py  event_translator.py  events.py  http_server.py  observability.py  run_agent.py  runner.py  sse.py  subagents.py  tools.py  worker.py
src/kokoro_agent/application/: __init__.py  agent_event_driver.py  agent_factory.py  control_results.py  event_payloads.py  event_stream.py  request_admission.py  run_agent.py  run_emitter.py  run_supervisor.py  run_terminal_events.py
src/kokoro_agent/application/events/: __init__.py  agent_event.py  agent_event_driver.py  event_payloads.py  run_emitter.py  subagent_router.py  text_accumulator.py
src/kokoro_agent/application/projection/: attribution.py  awaiting.py  result_messages.py  transformer.py
src/kokoro_agent/application/protocols/: __init__.py  agent.py  run_state.py  stream.py
src/kokoro_agent/application/run/: __init__.py  admission.py  consumer.py  invoke.py  request_admission.py  run_agent.py  run_supervisor.py  supervisor.py
src/kokoro_agent/config/: approval_policy.yaml
src/kokoro_agent/domain/: __init__.py  agent_event.py  control.py  events.py  json_payload.py  prompts.py  registered_subagent.py  run_event.py  run_request.py  stream_intent.py  subagent.py
src/kokoro_agent/domain/prompts/: system.md
src/kokoro_agent/events/: attribution.py  awaiting.py  project.py  reasoning_shim.py
src/kokoro_agent/execution/: agent_graph.py  approvals.py  build_agent.py  create_agent.py  events.py  protocols.py  publish_agent_events.py  resume_agent.py  run_agent.py
src/kokoro_agent/execution/prompts/: __init__.py  system.md
src/kokoro_agent/infrastructure/: __init__.py  _scripted.py  agent_adapter.py  agent_builder.py  approval_policy.py  approval_policy.yaml  builtin_tools.py  chat_model.py  config.py  constants.py  control.py  http_server.py  json_types.py  lc_adapter.py  local_fake_model.py  message_extractors.py  model.py  observability.py  permission.py  runner.py  runtime_subagent_tool.py  sse.py  stream_port.py  stream_translator.py  subagent_registry.py  tool_names.py
src/kokoro_agent/infrastructure/checkpoint/: __init__.py  factory.py
src/kokoro_agent/interfaces/: __init__.py  envelope.py  inbound.py  worker.py
src/kokoro_agent/mcp/: servers.py  tools.py
src/kokoro_agent/model/: __init__.py  factory.py  local_fake.py
src/kokoro_agent/run/: __init__.py  capabilities.py  context.py  events.py  invoke.py  lifecycle.py  supervisor.py
src/kokoro_agent/sandbox/: backend.py  policy.py
src/kokoro_agent/skills/: mounts.py
src/kokoro_agent/storage/: __init__.py  checkpoints.py  leases.py  memory.py  mongo_lease_store.py  run_state.py  sqlite_lease_store.py
src/kokoro_agent/streams/: __init__.py  factory.py  json_types.py  memory.py  protocol.py  redis.py
src/kokoro_agent/subagents/: __init__.py  catalog.py  definitions.py  types.py
src/kokoro_agent/tools/: ask_user.py  middleware.py  names.py  permissions.py  registry.py
src/kokoro_agent/wire/: __init__.py  run_request.py
src/kokoro_agent/worker/: main.py  messages.py
tasks/: lessons.md  todo.md
tests/: _fake_chat_model.py  stream_contracts.py  test_agent_event.py  test_agent_event_driver.py  test_approval_policy.py  test_builtin_tools.py  test_checkpoint.py  test_config.py  test_consumer.py  test_control.py  test_event_types.py  test_events.py  test_factories.py  test_interrupt_config.py  test_local_fake.py  test_model.py  test_observability.py  test_package_architecture.py  test_permission.py  test_run_agent.py  test_run_state.py  test_runtime_subagent_protocol.py  test_stream_port_memory.py  test_stream_port_redis.py  test_subagent_router.py  test_subagents.py  test_text_accumulator.py  test_tools.py  test_transport_memory.py  test_transport_redis.py  test_worker.py
tests/events/: test_agent_event.py  test_attribution.py  test_awaiting.py  test_project.py  test_reasoning_shim.py
tests/interfaces/: test_envelope.py  test_inbound.py
tests/projection/: test_awaiting.py  test_hitl.py  test_transformer.py
tests/run/: fakes.py  test_custom_event_e2e.py  test_hitl_e2e.py  test_invoke.py  test_supervisor.py
tests/subagent/: test_agent_name_injection.py
tests/wire/: test_run_request.py
(+43 files in other folders)
