[project]
name = "kokoro-agent"
version = "0.1.0"
description = "Kokoro agent runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "deepagents",
  "httpx>=0.28.1",
  "langchain",
  "langchain-anthropic",
  "langchain-openai>=1.2.2",
  "langfuse>=4.7.1",
  "langgraph-checkpoint-mongodb>=0.4.0",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "pydantic>=2",
  "python-dotenv>=1.2.2",
  "redis>=5",
]

[project.scripts]
kokoro-agent-worker = "kokoro_agent.interfaces.worker:main"

[dependency-groups]
dev = [
  "pyright>=1.1.380",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# 随包分发的非 .py 资源（提示词正文），否则 wheel 会漏掉。
[tool.setuptools.package-data]
kokoro_agent = ["domain/prompts/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
# langgraph 1.2 core 的 stream/pregel 子模块缺 pyright stub（py.typed 未覆盖）；仅关第三方 stub 提示，不削弱本仓代码检查。
reportMissingTypeStubs = false

[tool.mypy]
python_version = "3.11"
# 让 mypy 对着项目 venv 解析导入，否则回退到陈旧全局包、误报 typed 依赖的符号缺失。
python_executable = ".venv/bin/python"

# 这些是真实运行时依赖，但 mypy 解析不到其类型(无 stub / stub 未装)；静默缺 stub 的 import 错误而非用法。
[[tool.mypy.overrides]]
module = ["redis.*", "langfuse.*"]
ignore_missing_imports = true

# numpy 2.5 的 .pyi 用 PEP 695 type 语句(py3.12+)，mypy 在 3.11 目标下解析报 syntax；
# numpy 仅经 mongo checkpointer(langchain-mongodb) 传递引入、本仓不直接用，跳过跟随其源/stub。
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true
